--- a/_posts/2021-12-21-fedfr.markdown
+++ b/_posts/2021-12-21-fedfr.markdown
@@ -1,6 +1,6 @@
 ---
 layout: post
-title:  "FedFR: Joint Optimization Federated Framework for Generic and Personalized Face Recognition"
+title:  "Intel RealSense Stereoscopic Depth Cameras"
 date:   2021-12-21 11:24:00 +00:00
 image: /images/fedfr.png
 categories: research
