--- a/_posts/2019-06-02-venue.markdown
+++ b/_posts/2019-06-02-venue.markdown
@@ -1,6 +1,6 @@
 ---
 layout: post
-title:  "Direct Fitting of Gaussian Mixture Models"
+title:  "FedFR Joint Optimization Federated Framework for Generic and Personalized Face Recognition"
 date:   2019-05-29 22:21:59 +00:00
 image: /images/fedfr.png
 categories: research
