--- a/_posts/2021-12-21-fedfr.markdown
+++ b/_posts/2021-12-21-fedfr.markdown
@@ -5,7 +5,7 @@ date:   2022-05-29 22:21:59 +00:00
 image: /images/fedfr.png
 categories: research
 author: "Chien-Yi"
-authors: "Chih-Ting Liu*, <strong>Chien-Yi Wang*</strong>, Shao-Yi Chien, Shang-Hong Lai (*=equal contribution)"
+authors: "Chih-Ting Liu, <strong>Chien-Yi Wang</strong>, Shao-Yi Chien, Shang-Hong Lai"
 venue: "AAAI"
 arxiv: https://github.com/chienyiwang
 code: https://github.com/jackie840129/FedFR
